更新 base tableview

--- a/FrameworkDemo/Podfile
+++ b/FrameworkDemo/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-
+source 'https://git.oschina.net/akuandev/Specs.git'
 target 'FrameworkDemo' do
     #pod 'GinhoorFramework', :podspec => '../GinhoorFramework.podspec'  #指定podspec文件
     pod 'BlocksKit', '~> 2.2.5'
@@ -7,6 +7,8 @@ target 'FrameworkDemo' do
     pod 'AFNetworking', '~> 2.5.1'
     pod 'CocoaLumberjack', '~> 2.0.0'
     pod 'libextobjc', '~> 0.4.1'
+    pod 'MJRefresh', '~> 1.4.5'
+
 end
 
 target 'FrameworkDemoTests' do
