1. fix GinPageViewController 页面切换方法bug 2. 添加 Photo Gallery
增加依赖库 SDWebImage

--- a/FrameworkDemo/Podfile
+++ b/FrameworkDemo/Podfile
@@ -4,13 +4,15 @@ target 'FrameworkDemo' do
     #pod 'GinhoorFramework', :podspec => '../GinhoorFramework.podspec'  #指定podspec文件
 
     #pod 'AFNetworking', '~> 2.5.1'
-    pod 'Mantle', '~> 1.5.4'
     #pod 'libextobjc', '~> 0.4.1'
     #pod 'CocoaLumberjack', '~> 2.0.0'
 
+    pod 'Mantle', '~> 1.5.4'
     pod 'BlocksKit', '~> 2.2.5'
     pod 'Masonry', '~> 0.6.1'
     pod 'MJRefresh', '~> 1.4.5'
+    pod 'SDWebImage', '~> 3.7.2'
+
 end
 
 target 'FrameworkDemoTests' do
