--- a/FrameworkDemo/Podfile
+++ b/FrameworkDemo/Podfile
@@ -15,6 +15,8 @@ target 'FrameworkDemo' do
     pod 'DateTools', '~> 1.5.0'
     pod 'DZNEmptyDataSet', '~> 1.5.2'
     pod 'Baidu-Maps-iOS-SDK', '~> 2.6.0'
+    pod 'ReactiveCocoa', '~> 2.5'
+
 end
 
 target 'FrameworkDemoTests' do
