--- a/FrameworkDemo/Podfile
+++ b/FrameworkDemo/Podfile
@@ -1,5 +1,7 @@
 # Uncomment this line to define a global platform for your project
 
+inhibit_all_warnings!
+
 target 'FrameworkDemo' do
     #pod 'GinhoorFramework', :podspec => '../GinhoorFramework.podspec'  #指定podspec文件
 
@@ -20,6 +22,13 @@ target 'FrameworkDemo' do
 end
 
 target 'FrameworkDemoTests' do
+    pod 'Mantle', '~> 1.5.4'
 
 end
 
+
+#post_install do |installer|
+#    installer.pods_project.targets.each do |target|
+#        puts target.name
+#    end
+#end
