--- a/FrameworkDemo/Podfile
+++ b/FrameworkDemo/Podfile
@@ -5,19 +5,21 @@ inhibit_all_warnings!
 target 'FrameworkDemo' do
     #pod 'GinhoorFramework', :podspec => '../GinhoorFramework.podspec'  #指定podspec文件
 
-    pod 'AFNetworking', '~> 2.5.1'
+    pod 'AFNetworking', '~> 2.6.0'
     pod 'ReactiveCocoa', '~> 2.5'
+    pod 'GinhoorFramework', '~> 1.3.60'
+
 
     #pod 'libextobjc', '~> 0.4.1'
-    #pod 'CocoaLumberjack', '~> 2.0.0'
+    #pod 'CocoaLumberjack', '~> 2.0.1'
 
-    pod 'Mantle', '~> 1.5.4'
+    pod 'Mantle', '~> 2.0.4'
     pod 'BlocksKit', '~> 2.2.5'
     pod 'Masonry', '~> 0.6.1'
-    pod 'MJRefresh', '~> 1.4.5'
-    pod 'SDWebImage', '~> 3.7.2'
+
+    pod 'SDWebImage', '~> 3.7.3'
     pod 'DateTools', '~> 1.5.0'
-    pod 'DZNEmptyDataSet', '~> 1.5.2'
+    pod 'DZNEmptyDataSet', '~> 1.7.1'
     pod 'Baidu-Maps-iOS-SDK', '~> 2.6.0'
     
 end
