--- a/FrameworkDemo/Podfile
+++ b/FrameworkDemo/Podfile
@@ -11,8 +11,9 @@ target 'FrameworkDemo' do
     pod 'ReactiveCocoa', '~> 2.5'
 
     #pod 'libextobjc', '~> 0.4.1'
-    #pod 'CocoaLumberjack', '~> 2.0.1'
-
+    pod 'CocoaLumberjack', '~> 2.0.1'
+    pod 'UMengAnalyticsSDK', '~> 3.6.5'
+    
     pod 'Mantle', '~> 2.0.4'
     pod 'BlocksKit', '~> 2.2.5'
     pod 'Masonry', '~> 0.6.1'
