--- a/FrameworkDemo/Podfile
+++ b/FrameworkDemo/Podfile
@@ -26,6 +26,9 @@ target 'FrameworkDemo' do
     pod 'DateTools', '~> 1.5.0'
     pod 'DZNEmptyDataSet', '~> 1.7.1'
     pod 'Baidu-Maps-iOS-SDK', '~> 2.6.0'
+    
+    pod 'Aspects','~> 1.4.1'
+    
     inhibit_all_warnings!
 end
 
