添加 AFNetworking 3.0 使用案例

--- a/FrameworkDemo/Podfile
+++ b/FrameworkDemo/Podfile
@@ -10,7 +10,8 @@ pod 'Mantle', '~> 2.0.4'
 target 'FrameworkDemo' do
     #pod 'GinhoorFramework', :podspec => '../GinhoorFramework.podspec'  #指定podspec文件
 
-    pod 'AFNetworking', '~> 2.6.0'
+#    pod 'AFNetworking', '~> 2.6.0'
+    pod 'AFNetworking', '~> 3.1.0'
     pod 'ReactiveCocoa', '~> 2.5'
 
     #pod 'libextobjc', '~> 0.4.1'
