--- a/FrameworkDemo/Podfile
+++ b/FrameworkDemo/Podfile
@@ -6,7 +6,7 @@ source 'https://github.com/CocoaPods/Specs.git'
 
 
 target 'myWidget' do
-    pod 'Masonry', '~> 0.6.4'
+    pod 'Masonry', '~> 1.0.2'
 end
 
 target 'FrameworkDemo' do
@@ -14,26 +14,25 @@ target 'FrameworkDemo' do
 
 #    pod 'AFNetworking', '~> 2.6.0'
     pod 'AFNetworking', '~> 3.1.0'
-    pod 'Masonry', '~> 0.6.4'
-    pod 'CocoaLumberjack', '~> 2.0.1'
+    pod 'Masonry', '~> 1.0.2'
     pod 'LEETheme', '~> 1.0.7'
     pod 'Mantle', '~> 2.0.7'
     
+    pod 'Realm', '~> 1.0.2'
     
     pod 'ReactiveCocoa', '~> 2.5'
 
     #pod 'libextobjc', '~> 0.4.1'
-    pod 'CocoaLumberjack', '~> 2.0.1'
+    pod 'CocoaLumberjack', '~> 3.0.0'
     pod 'UMengAnalyticsSDK', '~> 3.6.5'
     
     pod 'BlocksKit', '~> 2.2.5'
-    pod 'Masonry', '~> 0.6.4'
-    #pod 'MJRefresh', '~> 2.4.10'
+    
     pod 'MJRefresh', '~> 3.1.12'
     
-    pod 'SDWebImage', '~> 3.7.3'
+    pod 'SDWebImage', '~> 3.8.2'
     pod 'DateTools', '~> 1.5.0'
-    pod 'DZNEmptyDataSet', '~> 1.7.1'
+    pod 'DZNEmptyDataSet', '~> 1.8.1'
     pod 'Baidu-Maps-iOS-SDK', '~> 3.0.0'
     
     pod 'Aspects','~> 1.4.1'
