--- a/FrameworkDemo/FrameworkDemo/Info.plist
+++ b/FrameworkDemo/FrameworkDemo/Info.plist
@@ -33,6 +33,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSContactsUsageDescription</key>
+	<string>相册</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>麦克风</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>相机</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
