--- a/FrameworkDemo/Podfile
+++ b/FrameworkDemo/Podfile
@@ -24,8 +24,8 @@ target 'FrameworkDemo' do
     
     pod 'BlocksKit', '~> 2.2.5'
     
-    pod 'MJRefresh', '~> 3.1.12'
-    
+#    pod 'MJRefresh', '~> 3.1.12'
+
     pod 'SDWebImage', '~> 3.8.2'
     pod 'DateTools', '~> 1.5.0'
     pod 'DZNEmptyDataSet', '~> 1.8.1'
